********** SPL 1.5 Release Candidate 3 **********
===== Build 0066 2019/04/13 =====

* Bug fixes:
    * Fixed the file directory problem
    * Fixed the bug that operator 'instanceof' returns false for all native types
* Interpreter code optimization:
    * Set the '__' suffix as the signal of spl internal method
    * Change the native types' type_name() to @classmethod type_name__()

********** SPL 1.5 Release Candidate 2 **********
===== Build 0065 2019/04/13 =====

* Bug fixes:
    * Fixed the unknown docstring from native types
    * Fixed that the file reader takes wrong type of string
* Interpreter code optimization:
    * Optimized the invoke of static method in native types

********** SPL 1.5 Beta 4 **********
===== Build 0064 2019/04/13 =====

* New syntax:
    * Assignment now be treated the same as any other binary expressions
* Redesign the parser on the function build system
* New functions in "math":
    * gcd(x, y)
    * log(x, base) which returns the logarithm
* Implemented the help function on native objects

********** SPL 1.5 Release Candidate **********
===== Build 0063 2019/04/12 =====

* Added more parse-time check
* Bug fixes:
    * For-each loop not working on spl iterable classes

********** SPL 1.5 Beta 3 **********
===== Build 0062 2019/04/11 =====

* Implemented help system:
    * The native function 'help' now works
* Bug fixes:
    * The catch statement could not catch specified exceptions thrown by spl interpreter
    * The reference counter would not set back as needed when there are nested class instantiation

********** SPL 1.5 Beta 2 **********
===== Build 0061 2019/04/10 =====

* New syntax:
    * Increment and decrement operator '++', '--'
* Performance optimization:
    * Optimized the performance of evaluation-assignment expression (like '+=')
    * Optimized boolean value and null
    * Loop speed increased for about 20%

********** SPL 1.5 Beta 1 **********
===== Build 0060 2019/04/10 =====

* Function changes: