@@ -1,3 +1,8 @@
+********** SPL 1.5 Release **********
+===== Build 0067 2019/04/14 =====
+
+* Changed the type name of system, os, and natives to UpperCamel
+
 ********** SPL 1.5 Release Candidate 3 **********
 ===== Build 0066 2019/04/13 =====
 
